# evolusnake

./: README.md  TODO.txt  pyproject.toml
docs/source/: conf.py  es_config.rst  index.rst
examples/: suggestions.txt
examples/bin_packing/: bin_packing_main.py  run_example.sh
examples/knapsack/: knapsack_config.json  knapsack_main.py  run_example.sh
examples/neural_net/: TODO.txt  dataprovider.py  neural_net_main.py  run_example.sh
examples/neural_net1/: neural_net_config.json  neural_net_main.py  neuron.py
examples/neural_net2/: TODO.txt  dataprovider.py  neural_net_1.py  neural_net_2.py  neural_net_3.py  neural_net_4.py  neural_net_5.py  neural_net_6.py  neural_net_7.py  neural_net_base.py  neural_net_config.json  neural_net_main.py  neuron.py  run_example.sh  run_example1.sh  run_example2.sh
examples/queens/: queens_main.py  run_example.sh
examples/sudoku/: run_example.sh  sudoku_config.json  sudoku_main.py
examples/sudoku1/: run_example.sh  sudoku_main.py
examples/sudoku2/: run_example.sh  sudoku2_config.json  sudoku2_main.py
examples/tsp/: plot_positions.py  run_example.sh  tsp_config.json  tsp_main.py
src/evolusnake/: es_config.py  es_individual.py  (+15 more)
tests/: check_all.sh  common.py  test_combined.py  test_config.py  test_population.py  test_population_node1.py  test_population_node10.py  test_population_node11.py  test_population_node2.py  test_population_node3.py  test_population_node4.py  test_population_node5.py  test_population_node6.py  test_population_node7.py  test_population_node8.py  test_population_node9.py  test_server.py
(+8 files in other folders)
